--- a/Assets/GameJam_2022/Scripts/GameJam2022.JekyllHyde.Controller/GameJam2022.JekyllHyde.Controller.asmdef
+++ b/Assets/GameJam_2022/Scripts/GameJam2022.JekyllHyde.Controller/GameJam2022.JekyllHyde.Controller.asmdef
@@ -9,7 +9,10 @@
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
-    "precompiledReferences": [],
+    "precompiledReferences": [
+        "DOTween.dll",
+        "DOTweenEditor.dll"
+    ],
     "autoReferenced": false,
     "defineConstraints": [],
     "versionDefines": [],
