--- a/Assets/GameJam_2022/Scripts/GameJam2022.JekyllHyde.Manager/GameJam2022.JekyllHyde.Manager.asmdef
+++ b/Assets/GameJam_2022/Scripts/GameJam2022.JekyllHyde.Manager/GameJam2022.JekyllHyde.Manager.asmdef
@@ -4,6 +4,7 @@
     "references": [
         "GUID:a2f198581d6952f47bad1482895f006f",
         "GUID:41a824c6c4d2cc44d9be9cd91e1cc262",
+        "GUID:3b0d8c2f0f40d0b4fb09638bc2c35d74",
         "GUID:ca317205b3b941247863b2166ddbc232"
     ],
     "includePlatforms": [],
