Fluxo de navegacao launch menu game

--- a/Assets/GameJam_2022/Scripts/GameJam2022.JekyllHyde.Manager.Interface/GameJam2022.JekyllHyde.Manager.Interface.asmdef
+++ b/Assets/GameJam_2022/Scripts/GameJam2022.JekyllHyde.Manager.Interface/GameJam2022.JekyllHyde.Manager.Interface.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "GameJam2022.JekyllHyde.Manager.Interface",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "GUID:ca317205b3b941247863b2166ddbc232"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
